--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://www.jetbrains.org/intellij/sdk/docs/reference_guide/intellij_artifacts.html
 
-pluginGroup = com.github.skylightikk.easylog
-pluginName = easy-log
+pluginGroup = org.arp.easylog
+pluginName = easyLog
 pluginVersion = 0.0.1
-pluginSinceBuild = 193
+pluginSinceBuild = 201
 pluginUntilBuild = 201.*
 
 platformType = IC
-platformVersion = 2019.3
+platformVersion = 2020.1
 platformDownloadSources = true
